# python_prototyping

./: .gitignore  Linux_Basics.excalidraw  Pipfile  basic_python_web_Server.excalidraw  basic_python_web_Server_ibtegration_and_unit_tests.excalidraw  packaging_basics_and_Cythonzation.excalidraw  readme.md
00_Python_Concept_Practices/00_python_basics/basic_explorations/: readme.md
00_Python_Concept_Practices/01_python_multiprocessing/: 00_basics_of_multi_threading_in_Python.py
00_Python_Concept_Practices/03_build_C_extension_in_Python/01_Hello_World_Module/: hello_world.c  setup.py
00_Python_Concept_Practices/03_build_C_extension_in_Python/02_Fibbonacci/: setup.py  test_the_module.py
00_Python_Concept_Practices/04_encryption_decryption/: 05_white_boxing_encryption.py
00_Python_Concept_Practices/05_python_compiling/: 01_python_JIT_compilation.py  readme.md
00_Python_Concept_Practices/06_model-websocket-engine/: LICENSE  README.md  tasks.py
00_Python_Concept_Practices/06_model-websocket-engine/user_interface/: index.html
00_Python_Concept_Practices/06_model-websocket-engine/websocket_server_practice/: client.py  index.html  readme.md  server.py
00_python_basics/: 00_private_method_in_python.py  01_patchable_python.py
00_python_basics/basic_explorations/: 02_01_introspection_in_python.py  02_02_otrospection.ipynb
00_python_basics/my_cythonized_proj/: .gitignore  setup.py
00_python_basics/my_proj_name/: pyproject.toml  tasks.py
00_python_basics/my_proj_name/my_venv/: pyvenv.cfg
00_python_basics/my_proj_name/tests/unit/: test_main.py
01_Packaging_and_Cythonization/01_my_proj_name/: pyproject.toml
01_Packaging_and_Cythonization/02_my_cythonized_proj/: pyproject.toml  tasks.py
01_Packaging_and_Cythonization/02_my_cythonized_proj/tests/unit/: test_main.py
01_Packaging_and_Cythonization/03_01_my_basic_python_web_service/: pyproject.toml
01_Packaging_and_Cythonization/03_01_my_basic_python_web_service/src/basic_service/: app.py
01_Packaging_and_Cythonization/03_01_my_basic_python_web_service/src/basic_service/api/v1/: dtos.py
01_Packaging_and_Cythonization/03_03_my_basic_python_web_service/: docker-compose.yml  pyproject.toml
01_Packaging_and_Cythonization/my_basic_00_python_web_service/: tasks.py
01_Packaging_and_Cythonization/my_basic_python_web_service/: README.md
01_python_multiprocessing/: 02_animation_generation_multiProcessp.py
02_python_threading/: 00_fundamentals_of_python_multi-threading.ipynb
03_build_C_extension_in_Python/01_Hello_World_Module/: hello_world.c
03_build_C_extension_in_Python/02_Fibbonacci/: fibbonacci.c
04_encryption_decryption/: 01_encryption.ipynb  02_serialization_into_byte_stream.ipynb  03_encryption.py  04_aes_cbc_encryption.py  04_asymmetric_encryption.py  readme.md
06_model-websocket-engine/: Pipfile
06_model-websocket-engine/evaluation_server/: engine.py  main.py
python_multiprocessing/: 00_animation_generation_single_process.py  01_animation_generation_multiProcessp.py  _gen_moive.bat
python_threading/: 00_fundamentals_of_python_multi-threading.ipynb  00_no_grain_in_Python_multui_threading.py  01_multi_threading_vs_multi_processing_in_Python.py  02_how_GLI_prevented_multi_threading_in_python.py
(+24 files in other folders)
