[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "basic-python-web-service"
version = "0.1.0"
description = "A minimal and educational Python web service"
requires-python = ">=3.10"


authors = [
    { name = "Your Name", email = "your.email@example.com" },
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "invoke",
    "pytest",
    "black",
    "pyflakes",
]


[project.urls]
Repository = "https://example.com/basic-python-web-service"


[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 88
target-version = ["py310"]
